[package]
name = "redis-macros-derive-bincode"
description = "Derive macros to serialize/deserialize structures with bincode to store in redis."
version = "0.1.0"
edition = "2021"
authors = ["Igor Kanyuka", "Daniel Grant"]
readme = "README.md"
homepage = "https://github.com/ifel/redis-macros-derive-bincode"
repository = "https://github.com/ifel/redis-macros-derive-bincode"
license = "MIT"
keywords = ["redis", "macro", "derive", "bincode"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107" }
bincode = "1.3.3"
redis = "0.23.0"

[dev-dependencies]
redis = { version = "0.22.2", features = ["tokio-comp", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
